--- a/src/weather.css
+++ b/src/weather.css
@@ -1,1 +1,45 @@
-.weather {border: 1px solid #dadded;}
+.weather {font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid #dadded;
+    padding: 14px;
+    margin: 30px auto;
+    border-radius: 4px;
+    color: rgb(135, 135, 135);
+}
+.weather h1 {
+    font-size: 24px;
+    font-weight: 100;
+    margin: 20px 0 0 0;
+    line-height: 29px;
+}
+.weather ul{
+margin: 0;
+padding: 0;
+}
+.weather li {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 19px;
+    list-style: none;
+}
+.weather img {
+    height: 64px;
+    width: 64px;
+    margin-right: 10px;
+    display: inline-block;
+}
+.weather .temperature {
+    font-weight: bold;
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    line-height: 64px;
+    font-weight: 400;
+}
+.weather .unit {
+    color: rgb(33, 33, 33);
+    font-size: 16px;
+    font-weight: 400;
+    position: relative;
+    line-height: 1;
+    top: -34px;
+    margin-left: 5px;
+}
