--- a/src/weather.css
+++ b/src/weather.css
@@ -21,6 +21,11 @@ padding: 0;
     line-height: 19px;
     list-style: none;
 }
+.weather canvas {
+    margin-right: 10px;
+    margin-top: 5px;
+    display: inline-block;
+}
 .weather img {
     height: 64px;
     width: 64px;
